# kleisli-turtle

./: kleisli-turtle.cabal
src/: Main.hs  NewStyle.hs  OddStyle.hs  RegularStyle.hs
