cabal-version:       3.0

name:                kleisli-turtle
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aneilmac/kleiski-turtle#readme
license:             BSD-3-Clause
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple

executable kleisli-turtle
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules: NewStyle, OddStyle, RegularStyle
  default-language:    Haskell2010
  build-depends: base >= 4.13 && < 5
               , gloss
               , worldturtle >= 0.2 && < 0.3
